--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@
     appearance: textfield;
   }
 }
+
+.signup-backg {
+  background-image: url("./assets/admin-bg.png");
+  /* background-repeat: no-repeat; */
+  /* background-size: cover; */
+}
